0.19
 - Fix issues with POD documentation. Some head2 tags didn't have a newline above
   them, causing them to not behave as head tags
 - We were having problems checking error messages for dns and connection failures
   Different messages on different platforms / locales were making tests fail, and
   Paws harder to install
 - SQS docu update
 - ApiGateway support for variables
 - S3 API Update: support for ServerSideEncryption in UploadPart 

0.18 6 Nov 2015 
 - Important change: Paws license has been changed to a more permissive Apache 2.0
 - IAM update: SimulateCustomPolicy updated. Docs updated too
 - Autoscaling update: Encryption for EBS volumes flag. Docu update too
 - SSM update: new functionalities (SendCommand) for mangaging Windows boxes in AWS
 - new API Gateway service
 - STS docu update
 - DeviceFarm update: New Update and Delete methods
 - ELB docu update

0.17 22 Oct 2015
 - Pass tests on MacOSX by Roger Pettett
 - BREAKING CHANGE: All API methods and attributes have been properly CamelCased. Before
   that, some services were being generated with method names and attributes starting with
   lowercase. For example, in CloudWatchLogs, method DescribeLogGroups would expect:
     limit => Int, logGroupNamePrefix => Str
   Now it expects
     Limit => Int, LogGroupNamePrefix => Str
   The affected services are CloudSearchDomain, CloudTrail, CloudWatchLogs, CodeCommit,
   CodeDeploy, CodePipeline, Support, SimpleWorkflow, Glacier, ECS, DirectConnect, 
   DeviceFarm, DataPipeline, Config. 

   This change also applies to never-released-to-cpan services: MarketplaceCommerceAnalytics,
   IoT, IoTData, Inspector.

 - loaded classes can be made immutable for better performance vs a bit more load time
 - services can be preloaded via Paws->preload (see examples/preload.pl)
 - Experimental Furl caller
 - Proper linking of documentation to appropiate classes
 - All classes now have doc (some innner shapes docs were not being generated) 